--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
         <h3>Archetype</h3>
         <div id="archetype"></div>
     </div>
+    <div style="display: inline-block;">
+        <h3>Keyword</h3>
+        <div id="keyword"></div>
+    </div>
     <br>
 
     <div style="display: inline-block;">
@@ -667,9 +671,17 @@
                 // archetype
                 {
                     let archetype_counts = {
-                        creature: 0,
-                        wrath: 0,
                         mana_acceleration: 0,
+                        mana_acceleration_cards: [],
+                        creature: 0,
+                        creature_cards: [],
+                        reanimate: 0,
+                        reanimate_cards: [],
+                        wrath: 0,
+                        wrath_cards: [],
+
+                        explore: 0,
+                        explore_cards: [],
                     };
                     data.forEach((d, i) => {
                         if (d.length === 0) {
@@ -697,9 +709,24 @@
 
                         type_temp = type_temp.toLowerCase();
                         text_temp = text_temp.toLowerCase();
+
+                        // decktype
+                        if (text_temp.includes('add {')
+                            || (text_temp.includes('add') && text_temp.includes('mana'))
+                            || ((text_temp.includes(' land') || text_temp.includes('forest')) && text_temp.includes('put'))
+                            || (text_temp.includes('play') || text_temp.includes('additional land'))) {
+                            archetype_counts.mana_acceleration += count;
+                            archetype_counts.mana_acceleration_cards.push(d[0]);
+                        }
                         if (type_temp.includes('creature') || text_temp.includes('creature token')
                             || (text_temp.includes('land') && text_temp.includes('become') && text_temp.includes('creature'))) {
                             archetype_counts.creature += count;
+                            archetype_counts.creature_cards.push(d[0]);
+                        }
+                        if (text_temp.includes('graveyard to the battlefield')
+                            || (text_temp.includes('graveyard') && text_temp.includes('onto the battlefield under your control'))) {
+                            archetype_counts.reanimate += count;
+                            archetype_counts.reanimate_cards.push(d[0]);
                         }
                         if (text_temp.includes('destroy all') || text_temp.includes('destroy each')
                             || text_temp.includes('exile all') || text_temp.includes('exile each')
@@ -708,12 +735,13 @@
                             || (text_temp.includes('each creature') || text_temp.includes('creatures') || text_temp.includes('creature tokens')) && (text_temp.includes('get -') || text_temp.includes('gets -'))
                             || (text_temp.includes('deals') && text_temp.includes('each creature'))) {
                             archetype_counts.wrath += count;
+                            archetype_counts.wrath_cards.push(d[0]);
                         }
-                        if (text_temp.includes('add {')
-                            || (text_temp.includes('add') && text_temp.includes('mana'))
-                            || ((text_temp.includes(' land') || text_temp.includes('forest')) && text_temp.includes('put'))
-                            || (text_temp.includes('play') || text_temp.includes('additional land'))) {
-                            archetype_counts.mana_acceleration += count;
+
+                        // keyword
+                        if (text_temp.includes('explores')) {
+                            archetype_counts.explore += count;
+                            archetype_counts.explore_cards.push(d[0]);
                         }
                     });
                     let html = '';
@@ -728,6 +756,10 @@
                         output = true;
                         html += '<td>Beatdown</td>';
                     }
+                    if (archetype_counts.reanimate / counts_sum >= 0.10) {
+                        output = true;
+                        html += '<td>Reanimate</td>';
+                    }
                     if (archetype_counts.wrath / counts_sum >= 0.05) {
                         output = true;
                         html += '<td>Control</td>';
@@ -738,6 +770,16 @@
                     html += '</tr>';
                     html += '</table>';
                     $('#archetype').html(html);
+
+                    html = '';
+                    html += '<table>';
+                    html += '<tr>';
+                    if (archetype_counts.explore / counts_sum >= 0.16) {
+                        html += '<td>Explore</td>';
+                    }
+                    html += '</tr>';
+                    html += '</table>';
+                    $('#keyword').html(html);
 
                     console.log(archetype_counts);
                 }
